<resources>
    <string name="app_name">ImDonor</string>
    <string name="action_settings">Settings</string>
    <string name="donor_login">login as donor</string>
    <string name="blood_bank_login">login as blood bank</string>
    <string name="email_login">login via Email</string>
    <string name="phone_login">login via phone number</string>
    <string name="name">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="dob">D.O.B</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="last_date">Last donation date</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact">Contact</string>
    <string name="county">County</string>
    <string name="town">Town</string>
    <string name="street_address">Street Address</string>
    <string name="title_activity_main_donor">MainActivityDonor</string>
    <string name="urgent_requests">Urgent Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="news">News</string>
    <string name="donation_centres">Donation Centres</string>
    <string name="faqs">FAQs</string>
    <string name="quiz">Quiz</string>
    <string name="before_attending">Before Attending</string>
    <string name="learn_about_blood">Learn about blood</string>
    <string name="info">Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="last_donation_date">Last donation date</string>

    <string name="title_activity_new_blood_request">New Blood Request</string>

    <string name="patient_name">Patient Name</string>
    <string name="required_date">Required Date</string>
    <string name="treatment">Treatment</string>
    <string name="age">Age</string>
    <string name="no_of_units">No. Of Units</string>
    <string name="requested_by">Requested By:</string>
    <string name="alt_contact_no">Alternative contact\'s no (Optional):</string>
    <string name="contact_no">Attender\'s contact no.:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="a_positive">A+</string>
    <string name="a_negative">A-</string>
    <string name="b_positive">B+</string>
    <string name="b_negative">B-</string>
    <string name="o_positive">O+</string>
    <string name="o_negative">O-</string>
    <string name="ab_positive">AB+</string>
    <string name="ab_negative">AB-</string>
    <string name="hospital">Hospital</string>
    <string name="done">Done</string>
    <string name="err_first_name">First name is required</string>
    <string name="err_dob">Date of birth is required</string>
    <string name="err_last_name">Last name is required</string>
    <string name="err_contact">Provide either your email or phone</string>
    <string name="err_msg_email">Enter a valid email</string>
    <string name="err_msg_number">Enter a valid phone number</string>
    <string name="register_as_donor">Register as a donor?</string>
    <string name="registered_as_donor">Registered as a donor</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="requirements">Minimum Requirements</string>
    <string name="requirements_details">You are above 16 and below 65 years of age\n\nYou are above 50KGs but below 130KGs\n\nFor women, you aren\'t pregnant or haven\'t been pregnant in the past 12 months</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_password">Create Password</string>
    <string name="cancel">Cancel</string>
    <string name="err_password">Enter a valid password</string>
    <string name="err_password_mismatch">Passwords don\'t match</string>
    <string name="err_not_old_enough">You can\'t donate blood if below the age of 16</string>
    <string name="err_invalid_age">Enter a valid birth year</string>
    <string name="err_old">It\'s not advisable to donate blood over the age of 65</string>
    <string name="err_bank_name">Bood bank name is required</string>
    <string name="err_location_name">Location name is required</string>
    <string name="err_county">County name is required</string>
    <string name="err_town">Town name is required</string>
    <string name="err_street_address">Street address is required</string>
    <string name="edit_account_details">Edit account details</string>
    <string name="add_account_details">Add account details</string>
    <string name="title_activity_donor_profile">Donor Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="welcome">Welcome to I\'mDonor</string>
    <string name="try_again">Try again</string>
    <string name="err_login">Sorry couldn\'t log you in</string>
    <string name="login">Login</string>
    <string name="err_find_user">Couldn\'t find the user</string>
    <string name="err_password_weak">You entered a weak password</string>
    <string name="donors">Donors</string>
    <string name="hospital_name">Hospital name</string>
    <string name="err_invalid_age_alt">Enter a valid age</string>
    <string name="err_treatment">Enter treatment patient is undergoing</string>
    <string name="err_no_of_units">Enter a valid value</string>
    <string name="err_date">Enter a valid date</string>
    <string name="err_hosp_name">Enter a valid hospital name</string>
    <string name="err_phone">Enter a valid phone number</string>
    <string name="err_blood_group">Select the patient\'s blood group</string>
    <string name="err_group">Select the donor\'s blood group</string>
    <string name="select_hospital">Select hospital</string>
    <string name="success_blood_request">Blood request posted successfully</string>
    <string name="err_processing_request">There seems to be a problem processing your request</string>
    <string name="days_to_donation">Days to donation</string>
    <string name="is_donor">Donor?</string>
    <string name="Hrs">Hrs</string>
    <string name="action_logout">Logout</string>
    <string name="millisecond">ms</string>
    <string name="minute">Min</string>
    <string name="second">Sec</string>
    <string name="days">Days</string>
    <string name="till_donation_date">till you can donate</string>
    <string name="title_activity_news_detail">News Details</string>
    <string name="read_more">Read More</string>
    <string name="title_activity_new_donation">New Donation</string>
    <string name="search_donor">Search for Donor</string>
    <string name="select_donor">Select a Donor</string>
    <string name="donation_date">Donation date</string>
    <string name="donor_weight">Donor Weight</string>
    <string name="hb">Hb</string>
    <string name="hepA">Hepatitis A</string>
    <string name="hepB">Hepatitis B</string>
    <string name="hepC">Hepatitis C</string>
    <string name="hiv">HIV</string>
    <string name="syphilis">Syphilis</string>
    <string name="check_below_if_positive">Check below if positive</string>
    <string name="err_weight">Enter valid weight</string>
    <string name="err_hb">Enter valid Hb</string>
    <string name="success_blood_donation">Blood donation captured successfully</string>
    <string name="blood_bank_name">Blood bank name</string>

</resources>
