<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_urgent_request"
            android:checked="true"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/urgent_requests" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/news" />
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_donation_centres"
                android:icon="@drawable/ic_location_on_black_24dp"
                android:title="@string/donation_centres" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/faqs" />
            <item
                android:id="@+id/nav_quiz"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="@string/quiz" />
            <item
                android:id="@+id/nav_before_attending"
                android:icon="@drawable/ic_person_wait_24dp"
                android:title="@string/before_attending" />
            <item
                android:id="@+id/nav_about_blood"
                android:icon="@drawable/ic_blood_black_24dp"
                android:title="@string/learn_about_blood" />

        </menu>

    </item>


</menu>